<resources>
    <string name="app_name">News Agg</string>
    <string name="title_topics">Topics</string>
    <string name="title_favs">Favourites</string>
    <string name="title_account">Account</string>
    <string name="title_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fav_frag">Favourites Fragment</string>
    <string name="home_frag">Home Fragment</string>
    <string name="account_frag">Account Fragment</string>
    <string name="title_activity_topic_menu">TopicMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_topics">Topics</string>
    <string name="menu_sources">Sources</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="source1">Source 1</string>
    <string name="source2">Source 2</string>
    <string name="menu_refresh">Refresh</string>
    <string name="headline">Headline</string>
    <string name="loginBtn">Login</string>
    <string name="passHint">Password</string>
    <string name="usernameHint">Email</string>
    <string name="register">Don\'t have an account?</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="registerNewUser">Register</string>
</resources>