<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_refresh"
            android:icon="@drawable/ic_refresh"
            android:title="@string/menu_refresh"
            app:showAsAction="always"/>
        <item
            android:id="@+id/nav_topics"
            android:icon="@drawable/ic_topics"
            android:title="@string/menu_topics"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_sources"
            android:icon="@drawable/ic_sources"
            android:title="@string/menu_sources"
            app:showAsAction="never" />
        <item
            android:id="@+id/nav_sign_in"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_sign_in"/>
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_account"
            android:title="@string/menu_sign_out"/>
    </group>
</menu>